(2023.6, model) 2023.6 maven compilation is correct now on osx. Simplifying poms of children projects. Fixes on long for sizes on BoundedBuffer Report, transforming the only xtend class to a java class.